use pug instead of jade

--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "inject-loader": "^2.0.1",
-    "jade": "^1.11.0",
     "jsdom": "^9.2.1",
     "memory-fs": "^0.3.0",
     "mkdirp": "^0.5.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^1.0.0",
     "postcss": "^5.0.21",
+    "pug": "^2.0.0-beta6",
     "rimraf": "^2.4.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.0.0",
